# career-ops

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  INSTALL.md  Makefile  README.md  cv.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
config/: portals.yml  profile.yml  rubric.yml  targets.yml
docs/: ARCHITECTURE.md  CALIBRATION.md  RUBRIC.md  SETUP.md  VISA_NOTES.md
src/career_ops/: __init__.py  api.py  batch.py  calibration.py  cli.py  config.py  dashboard.py  embeddings.py  evaluator.py  ingest.py  llm.py  portals.py  prep.py  ranker.py  schemas.py  storage.py  tailor.py
templates/: cv_html.jinja
tests/: test_api.py  test_calibration.py  test_cv_chunking.py  test_prep.py  test_ranker.py  test_visa_scoring.py
tests/fixtures/calibration/: 01_anthropic_applied_ai.yml  02_enterprise_saas_ml.yml  03_no_sponsor_onsite.yml
